crates/toml/tests/snapshots/invalid/integer/leading-zero-3.stderr
TOML parse error at line 1, column 18
  |
1 | leading-zero-3 = 0_0
  |                  ^
unexpected leading zero, expected nothing
